--- a/Base64Image/Base64Image.csproj
+++ b/Base64Image/Base64Image.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MahApps.Metro" Version="2.4.9" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
