first functional version.

--- a/Base64Image/Base64Image.csproj
+++ b/Base64Image/Base64Image.csproj
@@ -2,12 +2,19 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <Title>Base64Image</Title>
+    <Version>1.0.1</Version>
+    <Company>pageBOX</Company>
+    <Description>Converts an image from the clipboard to base64 images - ready to be put back to the clipboard. Intended as an extention for Greenshot.</Description>
+    <PackageProjectUrl>https://github.com/pagebox/Base64Image</PackageProjectUrl>
+    <Copyright>pageBOX.ch</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="marvin.jpg" />
+    <Content Include="icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="marvin.jpg" />
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
