Changed Framework to net9.0; Bumped MahApps and System.Drawing.Common

--- a/Base64Image/Base64Image.csproj
+++ b/Base64Image/Base64Image.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net9.0-windows7.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>icon.ico</ApplicationIcon>
     <Title>Base64Image</Title>
-    <Version>1.0.4</Version>
+    <Version>1.0.5</Version>
     <Company>pageBOX</Company>
     <Description>Converts an image from the clipboard to base64 images - ready to be put back to the clipboard. Intended as an extention for Greenshot.</Description>
     <PackageProjectUrl>https://github.com/pagebox/Base64Image</PackageProjectUrl>
@@ -22,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MahApps.Metro" Version="2.4.9" />
-    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    <PackageReference Include="MahApps.Metro" Version="2.4.10" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.2" />
   </ItemGroup>
 
   <ItemGroup>
